# QtTemplate

./: CMakeLists.txt  LICENSE  README.md  main.cpp  resources.qrc
